# Diploma

./: .gitignore  README.md  Б22_505_Титов_ВКР_Презентация.pptx  Б22_505_Титов_Нир_Презентация.pptx
Stage3/: .gitignore  Makefile  README.md  pyproject.toml  report_stage3.md  requirements.txt
Stage3/configs/attacker/: drift.yaml  policy.yaml
Stage3/configs/data/: cicids2017.yaml  unsw_nb15.yaml
Stage3/configs/eval/: default.yaml
Stage3/configs/models/: autoencoder.yaml  bilstm.yaml  classical.yaml  cnn1d.yaml  cnn_lstm.yaml  gru.yaml  isolation_forest.yaml  logistic_regression.yaml  lstm.yaml  mlp.yaml  ocsvm.yaml  random_forest.yaml  tcn.yaml  transformer.yaml  vae.yaml  xgboost.yaml
Stage3/configs/pipeline/: realtime.yaml
Stage3/configs/preprocess/: default.yaml
Stage3/configs/train/: cnn_lstm_long.yaml  default.yaml  full.yaml  smoke.yaml
Stage3/experiments/runs/: autoencoder_seed42_eval.json  autoencoder_seed42_train.json  bilstm_seed42_eval.json  bilstm_seed42_train.json  cnn1d_seed42_eval.json  cnn1d_seed42_train.json  gru_seed42_eval.json  gru_seed42_train.json  isolation_forest_seed42_eval.json  isolation_forest_seed42_train.json  logistic_regression_seed123_eval.json  (+29 more)
Stage3/scripts/: 01_download_unsw.py  02_build_dataset.py  03_train.py  04_evaluate.py  05_run_attacker.py  06_drift_test.py  07_demo_realtime.py  10_run_experiment_E1.py  11_run_experiment_E2_error_analysis.py  12_run_experiment_E3_calibration.py  13_run_experiment_E4_attacker.py  14_run_experiment_E5_drift.py  15_run_experiment_E6_perf.py
Stage3/tests/: conftest.py  test_alerting.py  test_attacker.py  test_configs.py  test_drift.py  test_losses.py  test_metrics.py  test_models_smoke.py  test_preprocess.py  test_splits.py  test_utils.py  test_windowing.py
(+133 files in other folders)
